--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "eslint": "^5.9.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "node-sass": "^4.10.0",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
     "style-loader": "^0.23.1",
     "stylelint": "^9.8.0",
     "stylelint-config-recommended-scss": "^3.2.0",
@@ -26,5 +26,6 @@
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/webpack/bin/webpack.js --watch -d --color",
     "build": "NODE_ENV=production ./node_modules/webpack/bin/webpack.js --bail -p"
-  }
+  },
+  "dependencies": {}
 }
